<resources>
    <string name="app_name">StockScan</string>
    <string name="capture">Capture Image</string>
    <string name="preview_area">Camera Preview</string>
    <string name="produce_name_placeholder">Produce:</string>
    <string name="product_code">Product Code:</string>
    <string name="product_batch">Batch Code:</string>
    <string name="product_weight">Weight (g):</string>
    <string name="product_expiry_date">Expiry Date:</string>
    <string name="produce_count">Count:</string>
    <string name="cancel_btn">Cancel</string>
    <string name="save">Save</string>
    <string name="scanProd_description">Capture product scan</string>
</resources>